# ElephantChess

./: .gitignore  3dBoard.qml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CREDITS  Config.h.in  README.md  Roadmap.md  ToDo.md  basemodel.cpp  basemodel.h  board.cpp  board.old.h  board3d.cpp  board3d.h  boardview.cpp  boardview.h  cchess_rules.cpp  cchess_rules.cpp.old  cchess_rules.h  cchess_rules.h.old  contexmenu.cpp  contexmenu.h  deployment-win11.ps1  deployment.ps1  deployment.txt  engine.cpp  engine.h  genmove.cpp  genmove.h  lizense.txt  main.cpp  mainwindow.cpp  mainwindow.h  renderview.cpp  renderview.h  res.qrc  res.qrc.depends  settingsview.cpp  (+7 more)
.github/workflows/: build.yml  build_elephantchess.yml  cmake-multi-platform.yml  cmake-single-platform.yml  installqt6.yml  static.yml
Chameleon/: Chameleon.files
docs/: CNAME  Gemfile  _config.yml  datenschutz.html  download.html  footer.html  header.html  index.html  index.md  links.html  lizenzen.html  robots.txt  sitemaps.txt  sitemaps.xml  style.css
docs/_posts/: 2024-04-23-welcome-to-jekyll.markdown
doxygen/: Doxyfile
doxygen/html/: aboutview_8cpp.html  aboutview_8cpp__incl.map  aboutview_8cpp__incl.md5  aboutview_8cpp_source.html  aboutview_8h.html  aboutview_8h__dep__incl.map  aboutview_8h__dep__incl.md5  aboutview_8h__incl.map  aboutview_8h__incl.md5  aboutview_8h_source.html  annotated.html  basemodel_8cpp.html  basemodel_8cpp__incl.map  basemodel_8cpp__incl.md5  basemodel_8cpp_source.html  basemodel_8h.html  basemodel_8h__dep__incl.map  basemodel_8h__dep__incl.md5  basemodel_8h__incl.map  basemodel_8h__incl.md5  basemodel_8h_source.html  boardview_8cpp.html  boardview_8cpp__incl.map  boardview_8cpp__incl.md5  boardview_8cpp_source.html  boardview_8h.html  boardview_8h__dep__incl.map  boardview_8h__dep__incl.md5  boardview_8h__incl.map  boardview_8h__incl.md5  boardview_8h_source.html  cchess__rules_8cpp.html  cchess__rules_8cpp__incl.map  cchess__rules_8cpp__incl.md5  cchess__rules_8cpp_source.html  cchess__rules_8h.html  cchess__rules_8h__dep__incl.map  cchess__rules_8h__dep__incl.md5  cchess__rules_8h__incl.map  cchess__rules_8h__incl.md5  (+354 more)
doxygen/latex/: aboutview_8cpp.tex  aboutview_8cpp__incl.md5  aboutview_8cpp_source.tex  aboutview_8h.tex  aboutview_8h__dep__incl.md5  aboutview_8h__incl.md5  aboutview_8h_source.tex  annotated.tex  basemodel_8cpp.tex  basemodel_8cpp__incl.md5  basemodel_8cpp_source.tex  basemodel_8h.tex  basemodel_8h__dep__incl.md5  basemodel_8h__incl.md5  basemodel_8h_source.tex  boardview_8cpp.tex  boardview_8cpp__incl.md5  boardview_8cpp_source.tex  boardview_8h.tex  boardview_8h__dep__incl.md5  boardview_8h__incl.md5  boardview_8h_source.tex  cchess__rules_8cpp.tex  cchess__rules_8cpp__incl.md5  cchess__rules_8cpp_source.tex  cchess__rules_8h.tex  cchess__rules_8h__dep__incl.md5  cchess__rules_8h__incl.md5  cchess__rules_8h_source.tex  class_about_view.tex  class_about_view__inherit__graph.md5  class_advisor.tex  class_advisor__inherit__graph.md5  class_advisor_afb1a2a73278a6b61fe2a376c4ee4b4f8_cgraph.md5  (+165 more)
html/: datenschutz.html  download.html  footer.html  header.html  index.html  links.html  lizenzen.html  robots.txt  sitemaps.txt  sitemaps.xml  style.css
pgnlib/: CMakeLists.txt  PGNCommentText.cpp  PGNGame.cpp  PGNGame.h  PGNGameCollection.cpp  PGNGameCollection.h  PGNGameResult.cpp  PGNMove.cpp  PGNMove.h  PGNMoveList.cpp  PGNMoveList.h  PGNParser.cpp  PGNPiece.cpp  PGNPiece.h  PGNPly.cpp  PGNPly.h  PGNPosition.cpp  PGNSquare.cpp  PGNTag.cpp  PGNTagList.cpp  PGNTagList.h  files  main.cpp  pgnlib.files
pgnlib/.qtc_clangd/: compile_commands.json
pgnlib/.qtc_clangd/.cache/clangd/index/: PGNCommentText.cpp.5FD7982313A08B61.idx  PGNCommentText.h.0CCB02D3EE2020D2.idx  PGNException.cpp.D998EC9AF0AE4A46.idx  PGNException.h.1F0A1880FEF6330D.idx  PGNGame.cpp.7424B4E5AA6970D2.idx  PGNGame.h.04BBB3FD2EF385F3.idx  PGNGameCollection.cpp.428A1A7F0638D49D.idx  PGNGameCollection.h.97D4C4594B4B8CF0.idx  PGNGameResult.cpp.C4C80E756534A492.idx  PGNGameResult.h.109458F58D170CE1.idx  PGNMove.cpp.FCE011C5F2F60ABB.idx  PGNMove.h.AFF4EBBBF9150080.idx  PGNMoveList.cpp.50B0D001BB205DD7.idx  PGNMoveList.h.9784F65B979CCEAB.idx  PGNParser.cpp.4D3C94D018171F4E.idx  PGNParser.h.837FC2B0AD773380.idx  PGNPiece.cpp.92DF53CA310F9A4E.idx  PGNPiece.h.5CF1D2457874A688.idx  PGNPly.cpp.E0D0638D9FB23EE1.idx  PGNPly.h.8365AEF48846EFC0.idx  PGNPosition.cpp.C6662F076C7F04E4.idx  PGNPosition.h.52C1761C5CC0A12C.idx  PGNSquare.cpp.3DE668FCE763D92D.idx  PGNSquare.h.DE811E34BB636DB6.idx  PGNTag.cpp.D44E6CD8C2B9F325.idx  PGNTag.h.667FAD5726774C6F.idx  PGNTagList.cpp.A81D3E530AF35E66.idx  PGNTagList.h.6FF63426539DD480.idx  algorithm.A1AF8269E403AB5A.idx  atomic.511FE5E55FAC3467.idx  cassert.023009E14E3AD158.idx  cfloat.67A68165F537D4F5.idx  climits.EA7ACA1766F26B41.idx  cmath.52CE0732A38570BE.idx  corecrt.h.E4425A3B9B7A38F0.idx  corecrt_wstring.h.D8C73DDD41C34C58.idx  crtdbg.h.02AB43011BE4F892.idx  crtdefs.h.26243F339C182E17.idx  cstddef.8F2521A15CD859EB.idx  cstdint.E0A44A39001BAB10.idx  (+52 more)
res/: Basic.nsi  XiangQi.original.java  Xiangqi_Advisor_(Trad)+ wooden.png.kra  chinese-chess-piece.mtl  chinese-chess-sceneloader.mtl  chinese-chess.mtl  chinese-chess.stl  design-document.txt  license_short.txt  play-now.png:Zone.Identifier  wooden-piece-3d.blend  wooden-piece-3d.blend1  wooden-piece-3d.mtl  xiangqi.qmodel
sources/: CMakeLists.txt  CREDITS  aboutview.cpp  aboutview.h  basemodel.cpp  basemodel.h  basetypes.h  board.cpp  board.h  boardview.cpp  boardview.h  cchess_rules.cpp  cchess_rules.h  config.h.in  contexmenu.cpp  contexmenu.h  engine.cpp  engine.h  game.cpp  game.h  genmove.cpp  genmove.h  main.cpp  mainwindow.cpp  mainwindow.h  maschines.h  pieces.cpp  pieces.h  pieces_interface.cpp  pieces_interface.h  renderview.cpp  renderview.h  renderview3d.qml  res.qrc  res.qrc.depends  settingsview.cpp  settingsview.h  types.h  uci.cpp  uci.h
sources/res/: license_short.txt
tests/: CMakeLists.txt  test_elephantchess_app.cpp  test_elephantchess_app.h  test_xiangqi_app.cpp  test_xiangqi_app.h
